--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "main": "lib/index.js",
   "types": "lib/index.d.js",
   "scripts": {
-    "prepublishOnly": "npm run build",
-    "pretest": "npm run lint",
-    "prebuild": "npm run lint",
+    "build": "tsc",
+    "clean": "npm-run-all clean:build clean:test clean:module",
+    "clean:build": "rimraf ./lib",
+    "clean:module": "rimraf ./node_modules",
+    "clean:test": "rimraf ./coverage",
     "lint": "eslint --ext .js --ext .ts ./src",
+    "prebuild": "npm-run-all clean:build lint",
+    "prepublishOnly": "npm run build",
+    "pretest": "npm-run-all clean:test lint",
+    "serve": "echo no serve",
+    "start": "npm run serve",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose ./src",
     "ci:test": "./ci_test.sh",
-    "build": "tsc",
-    "start": "tsc -w"
+    "watch": "tsc -w"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
@@ -30,13 +36,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "ioredis-mock": "^7.0.0",
     "jest": "^27.5.1",
+    "npm-run-all": "^4.1.5",
     "pino": "^7.7.0",
     "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "ioredis": "^4.28.5",
-    "@google-cloud/pubsub": "^2.18.4"
+    "@google-cloud/pubsub": "^3.0.1",
+    "ioredis": "^4.28.5"
   }
 }
